<resources>

    <string name="app_name">CDA</string>
    <string name="name">Coding Dojo Angola</string>
    <string name="not_available">N/A</string>

    <!-- ************************************ LAUNCH ******************************************* -->
    <!--::::::::::::::::: SPLASH ::::::::::::::: -->
    <string name="skip">Skip</string>
    <string name="sign_in">Log in</string>
    <string name="cda_description">Comunidade de desenvolvedores em Angola</string>

    <!--::::::::::::::::: LOGIN ::::::::::::::: -->
    <string name="username">Nome de usuário</string>

    <string name="login">Entrar</string>
    <string name="not_member">Não tens conta ?</string>
    <string name="up_now">Inscreva-se</string>
    <string name="login_description">Não tenho conta, fazer o registo</string>

    <string name="login_wait_text">Efetuando login...</string>
    <string name="invalid_email_error">Email inválido</string>
    <string name="empty_password_error">Digite a palavra-passe</string>

    <!--::::::::::::::::: REGISTER ::::::::::::::: -->
    <string name="password">Palavra-passe</string>
    <string name="email">Email</string>

    <string name="accept">Li e aceito</string>
    <string name="privacy_statement">os termos e condições</string>

    <string name="register">Inscrever-se</string>
    <string name="or">ou</string>
    <string name="github">Entrar com github</string>
    <string name="already_member">Já é membro ?</string>
    <string name="register_description">Ja tenho conta, fazer o login</string>

    <string name="code_request">Pedir código de inscrição</string>
    <string name="code_submit">Inserir código</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>

    <!-- ********************************* MAIN CDA ******************************************** -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--::::::::::::: Title PageIndicator :::::::::-->
    <string name="recent">Recente</string>
    <string name="progress">Progresso</string>
    <string name="done">Feito</string>

    <string name="members">Membros</string>
    <string name="to_register">Como se Registar?</string>
    <string name="questions">Questões?</string>

    <string name="news">Noticias</string>
    <string name="blog">blog</string>

    <!--:::::::::::::::: MONTHS :::::::::::::::::-->
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Octubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>

    <string name="Jan">Jan</string>
    <string name="Feb">Fev</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Abr</string>
    <string name="May">Mai</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="Aug">Ago</string>
    <string name="Sept">Set</string>
    <string name="Oct">Out</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dez</string>

    <!--:::::::::::::: DAY OF WEEK :::::::::::::::-->
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sábado</string>

    <!--*************************************** ABOUT ****************************************** -->



    <!--***************************************** CDA ****************************************** -->


    <!--*************************************** MEMBERS **************************************** -->



    <!--*********************************** NOTIFICATION *************************************** -->
    <!-- :::::: DIALOG EXIT - FRAGMENT :::::: -->
    <string name="dialog_title">Confirmação</string>
    <string name="dialog_message">Deseja sair Coding Dojo Angola?</string>
    <string name="button_no">Não</string>
    <string name="button_yes">Sim</string>

    <string name="network_download">Desligada. Por favor ligue e volte a tentar novamente!!!</string>


    <!--*************************************** PROFILE **************************************** -->
    <string name="function">Developer Android</string>

    <!--*************************************** PROJECT **************************************** -->


    <!--*************************************** SETTING **************************************** -->


    <!-- ************************************ SPLIT ******************************************** -->
    <!-- :::::::::::: PROFILE ::::::::::::::: -->



    <!-- ::::::::::::  MENU ::::::::::::::: -->
    <string name="project">Projecto</string>
    <string name="member">Membros</string>
    <string name="cda">CDA</string>
    <string name="chat">Chat</string>
    <string name="settings">Definições</string>
    <string name="about">Acerca da App</string>
    <string name="exit">Sair</string>

    <string name="menu_description">Icon</string>
    <string name="sem_conversas_ainda">Sem conversas ainda</string>
    <string name="configuration">Configuração</string>
    <string name="perfil">Perfil</string>
    <string name="utilizador">Utilizador</string>
    <string name="texto">Texto</string>
    <string name="message">Mensagem</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Geral</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Albano Vaz</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Dados &amp; Sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificações</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_name">Conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="white_belt_text">Cinto Branco</string>
    <string name="yellow_belt_text">Cinto Amarelo</string>
    <string name="orange_belt_text">Cinto Laranja</string>
    <string name="green_belt_text">Cinto Verde</string>
    <string name="blue_belt_text">Cinto Azul</string>
    <string name="brown_belt_text">Cinto Castanho</string>
    <string name="black_belt_text">Cinto Negro</string>
    <string name="belt_text">Cinto</string>
    <string name="projects_text">Projetos</string>
    <string name="concluded_projects_text">Projetos Concluídos</string>
    <string name="programming_languages_text">Linguagens</string>
    <string name="technologies_text">Tecnologias</string>
    <string name="disponibility_text">Disponibilidade</string>
    <string name="full_time_text">Fulltime</string>
    <string name="part_time_text">Part-Time</string>
    <string name="freelancer_text">Freelancer</string>

    <string name="github_app_id">3a06671caef1347a8243</string>
    <string name="github_app_secret">7ad3a7392c86b5f9ee4c7fd2864b91ddba8fbf8d</string>
    <string name="github_app_url">https://codingdojo-79fd2.firebaseapp.com/__/auth/handler</string>
    <!-- *************************************************************************************** -->
</resources>
