<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background_one"
    android:id="@+id/activity_login_layout">

    <!-- **************************************************************************************** -->
    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/register_transparent"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="visible">

        <!-- :::::::::::::::::::::::::: LABEL NAME :::::::::::::::::::::::::: -->
        <AutoCompleteTextView
            android:id="@+id/auto_complete_login_name"
            style="@style/editText_style"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="80dp" />

        <!-- :::::::::::::::::::::::::: LABEL PASSWORD :::::::::::::::::::::: -->
        <EditText
            android:id="@+id/edit_text_login_password"
            style="@style/editText_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionUnspecified" />

        <!-- ::::::::::::::::::::::: BUTTON SIGN_UP ::::::::::::::::::::::: -->
        <Button
            android:id="@+id/button_login_sign_in"
            style="@style/button_style"
            android:text="@string/login"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"

            android:text="@string/or"
            android:textColor="@color/ViewBackground"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_login_gitHub"
            style="@style/button_style_gitHub"
            android:text="@string/github"
            android:onClick="sendLoginGithubData"/>

        <!-- :::::::::::::::::::::::: NOT A MEMBER - REGISTER ::::::::::::: -->
        <LinearLayout
            android:id="@+id/not_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_member"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/ViewBackground"/>

            <LinearLayout
                android:id="@+id/sign_up_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_now"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@mipmap/arrow_double_rigth_small"
                    android:layout_gravity="center"
                    android:onClick="startRegistration"
                    android:contentDescription="@string/login_description"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- *************************************** IMAGE LOGO *********************************** -->
    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"

        android:src="@drawable/cda_logo"
        app:sriv_oval="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <!-- *********************************** LOGIN PROGRESS ************************************ -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />

    <!-- ******************************** FRAGMENT REGISTER ************************************
    <fragment
        android:id="@+id/fragment_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="200dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_centerInParent="true"

        tool:layout="@layout/fragment_register"
        android:visibility="invisible">
    </fragment>
    -->
    <!-- *************************************************************************************** -->
</RelativeLayout>