<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_splash_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background_one"
    tools:context=".ui.launch.SplashActivity">

    <!--************************************** LOGO  *************************************** -->
    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/image_splash_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"

        android:src="@drawable/cda_logo"
        app:sriv_oval="true"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true" />

    <!--************************************** TEXT ******************************************** -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_splash_logo"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/cda_description"
        android:textSize="18sp"

        android:textColor="@color/white"/>

    <!--************************************** LINE ******************************************** -->
    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_above="@+id/layout_next"
        android:background="@color/colorPrimaryDark"/>

    <!--**************************************    *************************************** -->
    <LinearLayout
        android:id="@+id/layout_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!--::::::::::::::::::::::::::: LOGIN ::::::::::::::::: -->
        <TextView
            android:id="@+id/begin_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"/>

        <!--::::::::::::::::::::::::::: SKIP ::::::::::::::::: -->
        <TextView
            android:id="@+id/begin_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/skip"
            android:textColor="@color/Grey"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
    <!--**************************************************************************************** -->
</RelativeLayout>